tests/snapshots/cli_help__cli_help_resume.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Resume playback

Usage: spotuify resume [OPTIONS]

Options:
      --format <FORMAT>  Output format for the mutation receipt [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
