tests/snapshots/cli_help__cli_help_search_page.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Fetch a single page (10 items) of search results at a specific offset. Mirrors the TUI's scroll-load-more flow — useful for scripts walking past the 180-item streaming horizon

Usage: spotuify search-page [OPTIONS] <QUERY>

Arguments:
  <QUERY>  Search query

Options:
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --type <KIND>              Media kind to fetch [default: track] [possible values: track, episode, show, album, artist, playlist]
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --offset <OFFSET>          Offset (multiple of 10). Spotify caps `limit + offset` at 1000 [default: 0]
      --format <FORMAT>          Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
  -h, --help                     Print help
